# BridgetCraft

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: audio.rs  bench.rs  block.rs  game_settings.rs  gamepad.rs  interaction.rs  item.rs  main.rs  player.rs  save.rs  sky.rs  voxel_config.rs  world_gen.rs
src/net/: client.rs  host.rs  mod.rs  replicate.rs
src/ui/: game_menu.rs  hud.rs  loading.rs  menu.rs  menu_splash.rs  mod.rs
