[package]
name = "bridgetcraft"
version = "0.1.0"
edition = "2021"

[build-dependencies]
image = "0.25"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
bevy = { version = "0.18", features = ["bevy_dev_tools"] }
bevy_egui = "0.39"
bevy_replicon = "0.40.3"
bevy_replicon_renet = "0.16.0"
bevy_voxel_world = "0.16"
noise = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
